--- a/Kahlo/src/kahlo/PanelMonitoreo.form
+++ b/Kahlo/src/kahlo/PanelMonitoreo.form
@@ -113,6 +113,10 @@
                 <Property name="rows" type="int" value="5"/>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtAreaDescripcionFocusGained"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="txtAreaDescripcionMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -190,7 +194,7 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="86" max="32767" attributes="0"/>
+                  <EmptySpace pref="82" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -385,7 +389,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="11" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Brazo Izquierdo"/>
+            <Property name="text" type="java.lang.String" value="Servo paracaidas"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtServoLiberacion">
